<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/teste_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teste1button"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.104" app:layout_constraintVertical_bias="0.083"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <Button
            android:text="@string/teste_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teste2button"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.107" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/teste1button" app:layout_constraintVertical_bias="0.023"/>
    <Button
            android:text="@string/teste_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teste3button" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.107"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/teste2button"
            app:layout_constraintVertical_bias="0.047"/>
    <Button
            android:text="@string/vefificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verificarButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintVertical_bias="0.935"/>
    <TextView
            android:text="@string/o_que_daltonismo"
            android:layout_width="320dp"
            android:layout_height="37dp"
            android:id="@+id/textView"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:textSize="30sp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03"/>
    <TextView
            android:text="@string/daltonismo_uma_perturba_o_da_percep_o_visual_caracterizada_pela_incapacidade_de_diferenciar_todas_ou_algumas_cores_manifestando_se_muitas_vezes_pela_dificuldade_em_distinguir_o_verde_do_vermelho"
            android:layout_width="371dp"
            android:layout_height="65dp"
            android:id="@+id/textView2"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/fa_a_o_teste"
            android:layout_width="261dp"
            android:layout_height="43dp"
            android:id="@+id/textView3"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.246"
            android:textSize="30sp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintVertical_bias="0.055"/>
    <TextView
            android:text="@string/suas_respostas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.715" app:layout_constraintVertical_bias="0.436"/>
    <TextView
            android:text="@string/resultado_do_teste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultadoTextView"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.75" app:layout_constraintVertical_bias="0.919"/>
    <TextView
            android:text="@string/resposta_3"
            android:layout_width="79dp"
            android:layout_height="22dp"
            android:id="@+id/resposta3TextView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.718" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/resposta2TextView" app:layout_constraintVertical_bias="0.117"/>
    <TextView
            android:text="@string/resposta_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resposta2TextView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.706" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/resposta1TextView" app:layout_constraintVertical_bias="0.132"/>
    <TextView
            android:text="@string/resposta_1"
            android:layout_width="80dp"
            android:layout_height="17dp"
            android:id="@+id/resposta1TextView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.717" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintVertical_bias="0.016"/>

</androidx.constraintlayout.widget.ConstraintLayout>