<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".TesteActivity">

        <EditText
                android:id="@+id/respostaEditText"
                android:layout_width="252dp"
                android:layout_height="48dp"
                android:layout_marginTop="28dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/digite"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.534"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
                android:id="@+id/textView5"
                android:layout_width="354dp"
                android:layout_height="86dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/qual_n_mero_voc_v_na_imagem_abaixo"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                android:id="@+id/enviarButton"
                android:layout_width="114dp"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:text="@android:string/ok"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.286"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/respostaEditText"
                app:layout_constraintVertical_bias="1.0" />

        <Button
                android:id="@+id/cancelaButton"
                android:layout_width="116dp"
                android:layout_height="51dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="74dp"
                android:text="@string/cancelar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/enviarButton"
                app:layout_constraintTop_toBottomOf="@+id/respostaEditText" />

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="240dp"
                android:layout_height="238dp"
                android:contentDescription="TODO"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.168"
                app:srcCompat="@mipmap/ic_launcher" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>